...
                    if vm.isFetching {
                        ProgressView()
                    }
                }
            }
        }
        .navigationTitle("People")
        .toolbar {
            ToolbarItem(placement: .primaryAction) {
                create
            }
            ToolbarItem(placement: .navigationBarLeading) {
                refresh
...
        Button {
            shouldShowCreate.toggle()
        } label: {
            Symbols.plus.font(.system(.headline, design: .rounded).bold())
        }
        .disabled(vm.isLoading)
        .accessibilityIdentifier("createButton")
    }
    
    var refresh: some View {
        Button {
            Task {
                await vm.fetchUsers()
...
